--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
+html{
+    margin-bottom: 0em;
+}
 body{
     background-color: #F4F1DE;
     font-family: 'Roboto', sans-serif;
+    margin: 0em;
+   
 }
 h1{
     padding-top: 10px;
     text-align: left;
     background-color:black;
     color: white;
+    margin-top: auto;
 }
 
 h2{
