--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ h1{
     background-color:black;
     color: white;
     margin-top: auto;
+    
+    box-shadow: 3px 3px red, -1em 0 0.4em olive;
+
 }
 
 h2{
